sunnyside-agency-landing-page/style.css
/* ## Colors

### Primary

- Soft red: hsl(7, 99%, 70%)
- Yellow: hsl(51, 100%, 49%)
- Dark desaturated cyan (graphic design text): hsl(167, 40%, 24%)
- Dark blue (photography text): hsl(198, 62%, 26%)
- Dark moderate cyan (footer): hsl(168, 34%, 41%)

### Neutral

- Very dark desaturated blue: hsl(212, 27%, 19%)
- Very dark grayish blue: hsl(213, 9%, 39%)
- Dark grayish blue: hsl(232, 10%, 55%)
- Grayish blue: hsl(210, 4%, 67%)
- White: hsl(0, 0%, 100%)

## Typography

### Body Copy

- Font size: 18px

### Font

- Family: [Barlow](https://fonts.google.com/specimen/Barlow)
- Weights: 600
- Family: [Fraunces](https://fonts.google.com/specimen/Fraunces)
- Weights: 700, 900 */

:root {
    --soft-red: hsl(7, 99%, 70%);
    --yellow: hsl(51, 100%, 49%);
    --dark-des-cyan: hsl(167, 40%, 24%);
    --dark-blue: hsl(198, 62%, 26%);
    --dark-mod-cyan: hsl(168, 34%, 41%);
    --dark-des-blue: hsl(212, 27%, 19%);
    --very-dark-graish-blue: hsl(213, 9%, 39%);
    --dark-graish-blue: hsl(232, 10%, 55%);
    --graish-blue: hsl(210, 4%, 67%);
    --white: hsl(0, 0%, 100%);

    --fs--2: clamp(0.7035rem, 0.8184rem + -0.1415vi, 0.7901rem);
    --fs--1: clamp(0.8889rem, 0.8729rem + 0.0797vi, 0.9377rem);
    --fs-0: clamp(1rem, 0.9184rem + 0.4082vi, 1.25rem);
    --fs-1: clamp(1.125rem, 0.9483rem + 0.8837vi, 1.6663rem);
    --fs-2: clamp(1.2656rem, 0.9536rem + 1.56vi, 2.2211rem);
    --fs-3: clamp(1.4238rem, 0.922rem + 2.5092vi, 2.9607rem);
    --fs-4: clamp(1.6018rem, 0.8361rem + 3.8283vi, 3.9467rem);
    --fs-5: clamp(1.802rem, 0.6726rem + 5.6471vi, 5.2609rem);
}

@font-face {
    font-family: 'Barlow';
    src: url(fonts/Barlow-Regular.ttf);
}

@font-face {
    font-family: 'Fraunces';
    src: url(fonts/Fraunces-VariableFont_SOFT\,WONK\,opsz\,wght.ttf);
}

/* General styling */

*, *::before, *::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    transition: all .25s ease-out;
}

body {
    font-size: 1.2rem;
    font-family: 'Fraunces';
}

.preview {
    height: 30em;
    background-image: url(images/desktop/image-header.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center bottom;
    background-attachment: fixed;
}

.header {
    box-sizing: border-box;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    padding: 2em;
    font-size: 1rem;
    color: #fff;
    height: 20%;
}

.top_nav {
    width: 80%;
}

.selector {
    display: none;
}

ul {
    display: flex;
    gap: 2em;
    justify-content: flex-end;
    align-items: center;
    list-style: none;
    padding: 0;
    margin: 0;
    flex-wrap: wrap;
}

li {
    cursor: pointer;
}

li:not(.contact_button):hover, li:not(.contact_button):focus {
   border-bottom: 2px solid white;
   color: #fff;
}

.bottom_nav li:hover, .bottom_nav li:focus {
    border-bottom: none;
}

.grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-areas: 
    "transform egg"
    "glass stand_out"
    "cherries orange_bg";
}

.transform, .stand_out {
    padding: 8vw;
}

.transform > *, .stand_out > * {
    margin-bottom: 4vw;
}

.testimonials {
    padding: 6vw;
    text-align: center;
}

.test_flex {
    display: flex;
    gap: 2em;
    flex-wrap: wrap;
}

.col {
    flex: 150px;
    justify-content: center;
    font-size: 1rem;
    font-weight: 500;
}

.col img {
    width: 3em;
    padding-block: 3em;
    border-radius: 50%;
}

.name {
    margin-top: 4em;
    margin-bottom: 1em;
    font-weight: 900;
}

.cherries, .orange {
    display: flex;
    justify-content: center;
    align-items: flex-end;
    padding-inline: 10vw;
}

.section {
    text-align: center;
    margin-bottom: 8vw;
    margin-inline: auto;
    opacity: 0.7;
    font-weight: 500;
}

.section h3 {
    margin-bottom: 2vw;
}

.section p {
    font-size: 1rem;
}

footer {
    background-color: hsl(168, 34%, 41%);
    height: 15em;
}

.footer_wrapper {
    padding-top: 2em;
    height: 10em;
    margin-inline: auto;
}

.svg {
    margin: 2em auto;
    display: block;
    opacity: 0.7;
}

.bottom_nav ul {
    justify-content: center;
    font-size: 0.8rem;
    opacity: 0.7;
}

.share_links {
    display: flex;
    justify-content: center;
    gap: 1em;
    margin-block: 3em;
}

.share_links > * {
    cursor: pointer;
    opacity: 0.7;
}

.share_links > *:hover, .share_links > *:focus {
    fill: white;
}

/* Images */

.image {
    display: block;
    max-width: 100%;
    object-fit: cover;
    height: 100%;
}

.cherries {
    background-image: url(images/desktop/image-graphic-design.jpg);
}

.orange {
    background-image: url(images/desktop/image-photography.jpg);
}

.cherries, .orange {
    background-size: cover;
    background-position: top;
}

.mobile {
    display: none;
}

.bottom_images {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
}

/* Text styling */

p:not(.name) {
    font-family: 'Barlow';
}

h1, .contact_button, a, h4 {
    text-transform: uppercase;
}

h1 {
    text-align: center;
    color: #fff;
    letter-spacing: 4px;
    word-spacing: 4px;
    font-size: var(--fs-5);
}

h2 {
    font-size: var(--fs-4);
    font-weight: 900;
    color: var(--dark-des-blue);
}

h3 {
    font-size: var(--fs-3);
}

h4 {
    font-size: var(--fs-2);
    color: hsla(212, 27%, 19%, 0.5);
    letter-spacing: 4px;
    word-wrap: break-word;
}

p {
    font-size: var(--fs-0);
    color: hsla(212, 27%, 19%, 0.7);
    font-weight: 600;
}

a {
    text-decoration: none;
    color: hsl(212, 27%, 19%);
    font-weight: 800;
    position: relative;
    padding: 0 4px; /* Space around text */
}

a::after {
    content: '';
    position: absolute;
    left: -0.3rem;
    right: -0.3rem; 
    bottom: -0.3rem;
    height: 0.6rem;
    border-radius: 10px;
    opacity: 0.4;
  }

.transform a::after {
    background: hsl(51, 100%, 49%);
}

.stand_out a::after {
    background: hsl(7, 99%, 70%);
}

a:hover::after, a:focus::after {
    opacity: 1;
    outline: none;
}

.position {
    color: hsla(212, 27%, 19%, 0.6);
}

/* Links */

.contact_button {
    font-weight: 900;
    color: var(--dark-des-blue);
    padding: 1em 1.5em;
    background-color: #fff;
    border-radius: 20px;
}

.contact_button:hover, .contact_button:focus {
    color: #fff;
    background-color: rgb(255,255,255, 0.4);
}

/* Adjustment for small screens */

@media screen and (max-width: 600px) {
    .image .desktop {
        display: none;
    }
    .image .mobile {
        display: block;
    }
    .grid {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: repeat(6, 1fr);
        grid-template-areas: 
        "egg"
        "transform"
        "glass"
        "stand_out"
        "cherries"
        "orange_bg";
    }
    .top_nav ul {
        display: none;
    }
    .top_nav {
        width: auto;
    }
    .selector {
        display: block;
        cursor: pointer;
    }
    .bottom_images {
        grid-template-columns: repeat(2, 1fr);
    }
    .col img {
        padding-block: 1em;
    }
    .name {
        margin-top: 2em;
    }
}

/* Grid areas */

.egg { grid-area: egg;}
.transform { grid-area: transform;}
.glass { grid-area: glass;}
.stand_out { grid-area: stand_out;}
.cherries { grid-area: cherries;}
.orange { grid-area: orange_bg;}

